# webrtc_actions

./: .gitignore  .gitlab-ci.yml
.github/workflows/: build.yml
api/: BUILD.gn  media_stream_interface.h  media_stream_track.h  peer_connection_interface.h
api/call/: transport.cc  transport.h
api/voip/: BUILD.gn
audio/: BUILD.gn  channel_receive.cc  channel_send.cc
cicd/: build_android.sh  build_android_bundle_out.sh  create_meta_file.sh  s3_package_finder.sh
dvc/: BUILD.gn  audiobufferqueue.cc  audiobufferqueue.h  audiopackethandler.cc  audiopackethandler.h  common.h  dvc_conference_factory_env.cc  dvc_conference_factory_env.h  dvc_constants.h  dvc_utils.cc  dvc_utils.h  dvc_voice_engine_provider.cc  dvc_voice_engine_provider.h  logging.h  rtp_utility.cc
dvc/api/audio_codecs/: donothingaudiodecoderadapter.cc  donothingaudiodecoderadapter.h  donothingaudioencoderadapter.cc  donothingaudioencoderadapter.h  dvcaudiocodecfactories.cc  dvcaudiocodecfactories.h
dvc/api/audio_codecs/dvc/: audio_decoder_dvc.cc  audio_decoder_dvc.h  audio_encoder_dvc.cc  audio_encoder_dvc.h  dvcaudiodecoderimpl.cc  dvcaudiodecoderimpl.h  dvcaudioencoderimpl.cc  dvcaudioencoderimpl.h
dvc/media/engine/: dvcvoicemediachannel.h
examples/: BUILD.gn
media/: BUILD.gn
media/base/: codec.cc  codec.h  media_channel.h  media_engine.h
media/engine/: webrtc_media_engine.cc  webrtc_voice_engine.h
patches/: android.sh  build_config_cpp_cpp.gni  buildtools.patch
pc/: BUILD.gn  channel.cc  channel.h  channel_interface.h  media_stream_track_proxy.h  peer_connection.cc  peer_connection.h  peer_connection_factory.h  peer_connection_factory_provider.cc  peer_connection_factory_provider.h  peer_connection_internal.h  peer_connection_proxy.h  rtp_transceiver.cc  sdp_offer_answer.cc  sdp_offer_answer.h  webrtc_session_description_factory.cc  webrtc_session_description_factory.h
sdk/: BUILD.gn
sdk/android/: BUILD.gn
sdk/objc/native/api/: audio_samples.h  (+3 more)
tools_webrtc/: BUILD.gn
tools_webrtc/android/: build_aar.py
tools_webrtc/ios/: build_ios_libs.py
video/: stream_synchronization.cc
(+58 files in other folders)
