# Copyright 2020 Dolby Laboratories and Dolby International AB
# Use of this source code is governed by the MIT license that can be
# found in the dolby/LICENSE file.

import("../webrtc.gni")

group("dvc") {
  public_deps = [
    ":dvc_media",
  ]
}

rtc_source_set("dvc_media") {
  sources = [
    "audiobufferqueue.cc",
    "audiobufferqueue.h",
    "audiopackethandler.cc",
    "audiopackethandler.h",
    "dvc_utils.cc",
    "dvc_utils.h",
    "dvc_conference_factory_env.cc",
    "dvc_conference_factory_env.h",
    "logging.h",
    "media/engine/dvcvoicemediachannel.h",
    "rtp_utility.cc",
    "rtp_utility.h",
  ]

  deps = [
    ":dvc_api",
    "../pc:fake_audio_capture_module",
  ]
  #configs += [
  #  ":dvc_sdk",
  #]
}

rtc_source_set("dvc_api") {
  sources = [
    "api/audio_codecs/dvc/audio_decoder_dvc.cc",
    "api/audio_codecs/dvc/audio_encoder_dvc.cc",
    "api/audio_codecs/dvc/dvcaudiodecoderimpl.cc",
    "api/audio_codecs/dvc/dvcaudioencoderimpl.cc",
    "api/audio_codecs/donothingaudiodecoderadapter.cc",
    "api/audio_codecs/donothingaudioencoderadapter.cc",
    "api/audio_codecs/dvcaudiocodecfactories.cc",
  ]

  deps = [
    "../api/audio_codecs:builtin_audio_decoder_factory",
    "../api/audio_codecs:builtin_audio_encoder_factory",
  ]

  if (rtc_include_ilbc) {
    deps += [
      "../api/audio_codecs/ilbc:audio_decoder_ilbc",
      "../api/audio_codecs/ilbc:audio_encoder_ilbc",
    ]
    defines = [ "WEBRTC_USE_BUILTIN_ILBC=1" ]
  } else {
    defines = [ "WEBRTC_USE_BUILTIN_ILBC=0" ]
  }
}
